# rprframework

./: .gitignore  .gitmodules  .vimrc  CMakeLists.txt  README.md  version.rc.in
cmake/: CompileOptions.cmake  FindRadeonImageFilter.cmake  FindRadeonProRenderSDK.cmake  WindowsFileVersion.cmake
math/: CMakeLists.txt  half.cpp  half.h  mathutils.h  matrix.h  quaternion.h
riff/: CMakeLists.txt  Context.cpp  Context.h  ContextObject.h  ContextQueue.cpp  ContextQueue.h  ContextUtils.cpp  ContextUtils.h  Error.cpp  Error.h  Image.cpp  Image.h  ImageDescription.h  ImageFilter.cpp  ImageFilter.h  ImageFilterType.h  MemoryMap.cpp  MemoryMap.h  RadeonImageFilterEnums.cpp  RadeonImageFilterEnums.h  ReadMemMapped.cpp  ReadMemMapped.h
rprf/: CMakeLists.txt  Camera.cpp  Camera.h  CameraType.h  CastContainer.h  CastContainer.hpp  Color4.cpp  Color4.h  ComponentType.h  Context.cpp  Context.h  ContextObject.cpp  ContextObject.h  ContextUtils.cpp  ContextUtils.h  Error.cpp  Error.h  FrameBuffer.cpp  FrameBuffer.h  FrameBufferSysmem.cpp  FrameBufferSysmem.h  GlobalFunctions.cpp  GlobalFunctions.h  Image.cpp  Image.h  Light.cpp  Light.h  LightDirectional.cpp  LightDirectional.h  LightEnvironment.cpp  LightEnvironment.h  LightPoint.cpp  LightPoint.h  LightSky.cpp  LightSky.h  LightSpot.cpp  LightSpot.h  MaterialNode.cpp  MaterialNode.h  MaterialNodeInput.cpp  (+18 more)
rprf/math/: CMakeLists.txt  float2.h  float3.h  float4.h  int2.h  int3.h  quaternion.h
src/: CMakeLists.txt  Camera.cpp  ComponentType.h  Context.cpp  Context.h  ContextObject.h  Contextx.cpp  Contextx.h  Error.cpp  Error.h  FrameBuffer.cpp  FrameBuffer.h  FrameBufferSysmem.cpp  FrameBufferSysmem.h  Image.cpp  Image.h  Light.cpp  LightDirectional.cpp  LightDirectional.h  LightEnvironment.cpp  LightEnvironment.h  LightSpot.cpp  LightSpot.h  MaterialNode.cpp  MaterialNodeType.h  MaterialSystem.h  Object.h  Plugin.cpp  Plugin.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h
stbimpl/: stbimpl.cpp
tests/: CMakeLists.txt  CommonData.cpp  CommonData.h  Environment.h.in  StreamRedirect.cpp  StreamRedirect.h  StreamRedirector.h  TestDummy.cpp  TestHybridPro.cpp  TestNorthstar.cpp  TestRenderer.cpp  TestRiff.cpp  TestUtils.cpp  Utils.cpp  Utils.h  testconfig.ini.in
tests/ImageTools/: ImageTools.h  stb_image.h  stb_image_write.h  tinyexr.h
tinyexrimpl/: CMakeLists.txt  tinyexrimpl.cpp
utils/: CMakeLists.txt  CubeData.h  convert.py  riffprobe.cpp  rprprobe.cpp
utils/riffprobe/: CMakeLists.txt  riffprobe.cpp
utils/rprprobe/: CMakeLists.txt  CubeData.cpp  CubeData.h  rprprobe.cpp
viewer/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Renderer.cpp  Renderer.h  main.cpp  main.qrc
